--- a/Stellar/Stellar/Storyboards/Base.lproj/Main.storyboard
+++ b/Stellar/Stellar/Storyboards/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--Main View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="MainViewController" customModule="Spacetagram" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MainViewController" customModule="Stellar" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -21,8 +21,8 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="space" translatesAutoresizingMaskIntoConstraints="NO" id="lTc-d7-Rud">
                                 <rect key="frame" x="-20" y="-20" width="454" height="936"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hmT-vD-fQ2">
-                                <rect key="frame" x="132" y="804.5" width="150" height="27.5"/>
+                            <button opaque="NO" alpha="0.90000000000000002" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hmT-vD-fQ2">
+                                <rect key="frame" x="132" y="814.5" width="150" height="27.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="4e2-DZ-hrW"/>
                                     <constraint firstAttribute="width" secondItem="hmT-vD-fQ2" secondAttribute="height" multiplier="512:94" id="xx7-mW-w0w"/>
@@ -39,11 +39,12 @@
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="hmT-vD-fQ2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8Xm-Id-zsU"/>
+                            <constraint firstItem="lTc-d7-Rud" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Cks-Re-gTI"/>
                             <constraint firstItem="lTc-d7-Rud" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="-20" id="Fd3-eq-c9X"/>
                             <constraint firstAttribute="trailing" secondItem="lTc-d7-Rud" secondAttribute="trailing" constant="-20" id="Tl0-IA-kRt"/>
                             <constraint firstItem="lTc-d7-Rud" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="-20" id="Wvf-jR-Ciq"/>
                             <constraint firstAttribute="bottom" secondItem="lTc-d7-Rud" secondAttribute="bottom" constant="-20" id="fO1-l6-vM6"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="hmT-vD-fQ2" secondAttribute="bottom" constant="30" id="xIh-Rh-17s"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="hmT-vD-fQ2" secondAttribute="bottom" constant="20" id="xIh-Rh-17s"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -57,6 +58,6 @@
     </scenes>
     <resources>
         <image name="dots" width="512" height="94"/>
-        <image name="space" width="1242" height="2208"/>
+        <image name="space" width="1876" height="1080"/>
     </resources>
 </document>
